--- a/store/blocks/home/home.jsonc
+++ b/store/blocks/home/home.jsonc
@@ -21,43 +21,51 @@
       "link#category4"
     ],
     "props": {
-      "blockClass": "header-categories"
-    }
+      "blockClass": "header-categories",
+      "htmld": "Sottomenu categorie"
+    },
+    "title": "Sottomenu categorie"
   },
   "link#category1": {
     "props": {
       "href": "#",
       "blockClass": "header-category1",
-      "label": "Lorem ipsum dolor sit amet"
+      "label": "Lorem ipsum dolor sit amet",
+      "htmlId": "link1"
     }
   },
   "link#category2": {
     "props": {
       "href": "#",
       "blockClass": "header-category2",
-      "label": "Lorem ipsum dolor sit amet"
+      "label": "Lorem ipsum dolor sit amet",
+      "htmlId": "link2"
     }
   },
   "link#category3": {
     "props": {
       "href": "#",
       "blockClass": "header-category3",
-      "label": "Lorem ipsum dolor sit amet"
+      "label": "Lorem ipsum dolor sit amet",
+      "htmlId": "link3"
     }
   },
   "link#category4": {
     "props": {
       "href": "#",
       "blockClass": "header-category4",
-      "label": "Lorem ipsum dolor sit amet"
+      "label": "Lorem ipsum dolor sit amet",
+      "htmlId": "link4"
     }
   },
 
   "flex-layout.row#home-main-slider": {
     "children": ["flex-layout.col#home-main-slider"],
     "props": {
-      "blockClass": "home-page-main-slider"
-    }
+      "blockClass": "home-page-main-slider",
+      "htmlId": "Cursore principale"
+    },
+    "title": "Cursore principale"
   },
 
   "flex-layout.col#home-main-slider": {
@@ -107,8 +115,10 @@
   "flex-layout.row#home-categories": {
     "children": ["flex-layout.col#home-categories"],
     "props": {
-      "blockClass": "home-categories"
-    }
+      "blockClass": "home-categories",
+      "htmlId": "Menu di categoria"
+    },
+    "title": "Menu di categoria"
   },
 
   "flex-layout.col#home-categories": {
@@ -122,7 +132,11 @@
   },
 
   "responsive-layout.desktop#home-categories-showcase": {
-    "children": ["flex-layout.row#home-categories-showcase"]
+    "children": ["flex-layout.row#home-categories-showcase"],
+    "props": {
+      "htmlId": "Categorie showcase Desktop"
+    },
+    "title": "Categorie showcase Desktop"
   },
 
   "flex-layout.row#home-categories-showcase": {
@@ -138,8 +152,10 @@
       "horizontalAlign": "around",
       "preventHorizontalStretch": true,
       "preventVerticalStretch": true,
-      "blockClass": "home-categories-showcase"
-    }
+      "blockClass": "home-categories-showcase",
+      "htmlId": "Categorie showcase"
+    },
+    "title": "Categorie showcase"
   },
 
   "flex-layout.col#home-categories-showcase-01": {
@@ -331,8 +347,10 @@
   "flex-layout.row#home-shelf-01": {
     "children": ["flex-layout.col#home-shelf-01"],
     "props": {
-      "blockClass": "home-shelf-01"
-    }
+      "blockClass": "home-shelf-01",
+      "htmlId": "Vetrina 1"
+    },
+    "title": "Vetrina 1"
   },
 
   "flex-layout.col#home-shelf-01": {
@@ -348,14 +366,18 @@
       "link#home-shelf-01-allProducts"
     ],
     "props": {
-      "blockClass": "home-shelf-01-title"
-    }
+      "blockClass": "home-shelf-01-title",
+      "htmlId": "Linha de titolo vetrina 1"
+    },
+    "title": "Linha de titolo vetrina 1"
   },
   "rich-text#home-shelf-01-title": {
     "props": {
       "blockClass": "home-section-title",
-      "text": "## Bricobravo consiglia"
-    }
+      "text": "## Bricobravo consiglia",
+      "htmlId": "Titolo vetrina 1"
+    },
+    "title": "Titolo vetrina 1"
   },
   "link#home-shelf-01-allProducts": {
     "props": {
@@ -368,8 +390,10 @@
   "flex-layout.row#home-shelf-02": {
     "children": ["flex-layout.col#home-shelf-02"],
     "props": {
-      "blockClass": "home-shelf-02"
-    }
+      "blockClass": "home-shelf-02",
+      "htmlId": "Vetrina 2"
+    },
+    "title": "Vetrina 2"
   },
 
   "flex-layout.col#home-shelf-02": {
@@ -385,14 +409,18 @@
       "link#home-shelf-02-allProducts"
     ],
     "props": {
-      "blockClass": "home-shelf-02-title"
-    }
+      "blockClass": "home-shelf-02-title",
+      "htmlId": "Linha de titolo vetrina 2"
+    },
+    "title": "Linha de titolo vetrina 2"
   },
   "rich-text#home-shelf-02-title": {
     "props": {
       "blockClass": "title-2-test home-section-title",
-      "text": "Offert del mese"
-    }
+      "text": "Offert del mese",
+      "htmlId": "Titolo vetrina 2"
+    },
+    "title": "Titolo vetrina 2"
   },
   "link#home-shelf-02-allProducts": {
     "props": {
@@ -405,8 +433,10 @@
   "flex-layout.row#home-shelf-03": {
     "children": ["flex-layout.col#home-shelf-03"],
     "props": {
-      "blockClass": "home-shelf-03"
-    }
+      "blockClass": "home-shelf-03",
+      "htmlId": "Vetrina 3"
+    },
+    "title": "Vetrina 3"
   },
 
   "flex-layout.col#home-shelf-03": {
@@ -422,14 +452,18 @@
       "link#home-shelf-03-allProducts"
     ],
     "props": {
-      "blockClass": "home-shelf-03-title"
-    }
+      "blockClass": "home-shelf-03-title",
+      "htmlId": "Linha de titolo vetrina 3"
+    },
+    "title": "Linha de titolo vetrina 3"
   },
   "rich-text#home-shelf-03-title": {
     "props": {
       "blockClass": "home-section-title",
-      "text": "## I prodotti più venduti"
-    }
+      "text": "## I prodotti più venduti",
+      "htmlId": "Titolo vetrina 3"
+    },
+    "title": "Titolo vetrina 3"
   },
   "link#home-shelf-03-allProducts": {
     "props": {
@@ -446,8 +480,10 @@
     ],
     "props": {
       "blockClass": "home-blog",
-      "preventVerticalStretch": false
-    }
+      "preventVerticalStretch": false,
+      "htmlId": "Blog"
+    },
+    "title": "Blog"
   },
   "flex-layout.col#home-blog": {
     "children": [
@@ -470,8 +506,10 @@
   "rich-text#home-blog-subtitle": {
     "props": {
       "blockClass": "home-blog-subtitle",
-      "text": "Qui troverai tante idee creative e ispirazioni, consigli utili, tutorial e molto altro per la tua casa!"
-    }
+      "text": "Qui troverai tante idee creative e ispirazioni, consigli utili, tutorial e molto altro per la tua casa!",
+      "htmlId": "Sottotitolo del blog"
+    },
+    "title": "Sottotitolo del blog"
   },
   "link#home-blog-link": {
     "props": {
@@ -492,8 +530,10 @@
   "rich-text#home-blog-shelf-title": {
     "props": {
       "blockClass": "home-blog-title",
-      "text": "Gli articoli più recenti"
-    }
+      "text": "Gli articoli più recenti",
+      "htmlId": "Titolo di vetrina del blog"
+    },
+    "title": "Titolo di vetrina del blog"
   },
   "slider-layout#home-blog-shelf": {
     "props": {
@@ -698,8 +738,10 @@
   "flex-layout.row#home-services": {
     "children": ["flex-layout.col#home-services"],
     "props": {
-      "blockClass": "home-services"
-    }
+      "blockClass": "home-services",
+      "htmlId": "Servizi"
+    },
+    "title": "Servizi"
   },
   "flex-layout.col#home-services": {
     "children": [
@@ -713,8 +755,10 @@
   "rich-text#home-services-title": {
     "props": {
       "blockClass": "home-section-title",
-      "text": "## I nostri servizi a tua disposizione"
-    }
+      "text": "## I nostri servizi a tua disposizione",
+      "htmlId": "Titolo dei servizi"
+    },
+    "title": "Titolo dei servizi"
   },
   "slider-layout#home-services": {
     "props": {
@@ -955,8 +999,10 @@
   "flex-layout.row#homeBottomSection": {
     "children": ["flex-layout.col#homeBottomSection"],
     "props": {
-      "blockClass": "homeBottomSection"
-    }
+      "blockClass": "homeBottomSection",
+      "htmlId": "Sezione inferiore"
+    },
+    "title": "Sezione inferiore"
   },
 
   "flex-layout.col#homeBottomSection": {
@@ -972,13 +1018,17 @@
   "responsive-layout.desktop#homeBottomSectionDesktop": {
     "children": ["flex-layout.row#homeBottomSectionDesktop"],
     "props": {
-      "blockClass": "homeBottomSectionDesktop"
-    }
+      "blockClass": "homeBottomSectionDesktop",
+      "htmlId": "Sezione inferiore Desktop"
+    },
+    "title": "Sezione inferiore Desktop"
   },
   "responsive-layout.mobile#homeBottomSectionMobile": {
     "children": ["flex-layout.row#homeBottomSectionMobile"],
     "props": {
-      "blockClass": "homeBottomSectionMobile"
-    }
+      "blockClass": "homeBottomSectionMobile",
+      "htmlId": "Sezione inferiore Mobile"
+    },
+    "title": "Sezione inferiore Mobile"
   }
 }
