--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -1,6 +1,10 @@
 {
   "header-layout.desktop": {
-    "children": ["sticky-layout#desktop-header"]
+    "children": ["sticky-layout#desktop-header"],
+    "props": {
+      "htmlId": "Header layout Desktop"
+    },
+    "title": "Header layout Desktop"
   },
   "sticky-layout#desktop-header": {
     "props": {
@@ -18,8 +22,10 @@
       "flex-layout.col#moreInfoPromotion"
     ],
     "props": {
-      "blockClass": "header-containerPromotion"
-    }
+      "blockClass": "header-containerPromotion",
+      "htmlId": "Riga di promozione"
+    },
+    "title": "Riga di promozione"
   },
   "rich-text#emptySpace": {
     "props": {
@@ -29,8 +35,10 @@
   "rich-text#promotion": {
     "props": {
       "blockClass": "header-titlePromotion",
-      "text": "OFFERTA SPECIALE sui prodotti per arredare il tuo giardino"
-    }
+      "text": "OFFERTA SPECIALE sui prodotti per arredare il tuo giardino",
+      "htmlId": "Promozione"
+    },
+    "title": "Promozione"
   },
   "flex-layout.col#moreInfoPromotion": {
     "children": ["disclosure-layout#moreInfoPromotion"]
@@ -52,8 +60,10 @@
   },
   "rich-text#moreInfoPromotion": {
     "props": {
-      "text": "Scopri di più"
-    }
+      "text": "Scopri di più",
+      "htmlId": "Promozione - Maggiori informazioni"
+    },
+    "title": "Promozione - Maggiori informazioni"
   },
   "disclosure-state-indicator#moreInfoPromotion": {
     "props": {
@@ -81,8 +91,10 @@
   },
   "rich-text#InfoPromotion": {
     "props": {
-      "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-    }
+      "text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
+      "htmlId": "Info promozione"
+    },
+    "title": "Info promozione"
   },
   "flex-layout.row#header-desktop-upper": {
     "props": {
@@ -91,13 +103,15 @@
       "preventHorizontalStretch": true,
       "preventVerticalStretch": false,
       "fullWidth": true,
-      "blockClass": "header-desktop-upper"
+      "blockClass": "header-desktop-upper",
+      "htmlId": "Header superiore"
     },
     "children": [
       "flex-layout.col#header-logo",
       "flex-layout.col#searchBar",
       "flex-layout.col#header-icons"
-    ]
+    ],
+    "title": "Header superiore"
   },
 
   "flex-layout.col#header-logo": {
