--- a/store/blocks/header/headerMobile.jsonc
+++ b/store/blocks/header/headerMobile.jsonc
@@ -1,6 +1,14 @@
 {
   "header-layout.mobile": {
-    "children": ["sticky-layout#mobile-header", "flex-layout.row#menu-mobile","header-mobile"]
+    "children": [
+      "sticky-layout#mobile-header",
+      "flex-layout.row#menu-mobile",
+      "header-mobile"
+    ],
+    "props": {
+      "htmlId": "Header layout Mobile"
+    },
+    "title": "Header layout Mobile"
   },
 
   "sticky-layout#mobile-header": {
@@ -13,8 +21,10 @@
   "flex-layout.row#header-mobile": {
     "children": ["flex-layout.col#header-mobile"],
     "props": {
-      "blockClass": "header-mobile"
-    }
+      "blockClass": "header-mobile",
+      "htmlId": "Header Mobile"
+    },
+    "title": "Header Mobile"
   },
 
   "flex-layout.col#header-mobile": {
@@ -26,14 +36,16 @@
       "blockClass": "header-mobile"
     }
   },
-  "flex-layout.row#header-logo-mobile":{
+  "flex-layout.row#header-logo-mobile": {
     "children": [
       "flex-layout.col#header-small-logo",
       "flex-layout.col#header-searchBar"
     ],
     "props": {
-      "blockClass": "header-mobile-teste"
-    }
+      "blockClass": "header-mobile-teste",
+      "htmlId": "Header logo"
+    },
+    "title": "Header logo"
   },
   "flex-layout.col#header-small-logo": {
     "children": ["link#header-small-logo"],
@@ -67,8 +79,10 @@
   "flex-layout.row#menu-mobile": {
     "children": ["flex-layout.col#menu-mobile"],
     "props": {
-      "blockClass": "header-menu-mobile"
-    }
+      "blockClass": "header-menu-mobile",
+      "htmlId": "Menu"
+    },
+    "title": "Menu"
   },
   "flex-layout.col#menu-mobile": {
     "children": [
