--- a/store/blocks/home/homeMobile.jsonc
+++ b/store/blocks/home/homeMobile.jsonc
@@ -1,6 +1,10 @@
 {
   "responsive-layout.mobile#home-categories-showcase": {
-    "children": ["flex-layout.row#mobile-home-categories-showcase"]
+    "children": ["flex-layout.row#mobile-home-categories-showcase"],
+    "props": {
+      "htmlId": "Categorie showcase Mobile"
+    },
+    "title": "Categorie showcase Mobile"
   },
 
   "flex-layout.row#mobile-home-categories-showcase": {
@@ -9,8 +13,10 @@
       "horizontalAlign": "center",
       "preventHorizontalStretch": true,
       "preventVerticalStretch": true,
-      "blockClass": "mobile-home-categories-showcase-main"
-    }
+      "blockClass": "mobile-home-categories-showcase-main",
+      "htmlId": "Categorie showcase"
+    },
+    "title": "Categorie showcase"
   },
 
   "slider-layout#mobile-home-categories-showcase": {
